--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
   <STYLE>
     <!--
     H1, H2 { color: green }
+    .tab {display:inline-block; width: 15px;}
     -->
   </STYLE>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
